--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1459,12 +1459,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
       "metadata": {
-        "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
+        "outputId": "32185649-2c31-400c-827b-466daafbd5c3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CSV file created successfully!\n"
+          ]
+        }
+      ],
       "source": [
         "#si-exercise\n",
         "\n",
@@ -1499,10 +1511,19 @@
         "\n",
         "        lego_df = pd.DataFrame(data)\n",
         "        lego_df.to_csv(\"lego2019.csv\", index=False)\n",
+        "\n",
+        "        return lego_df\n",
+        "\n",
         "    else:\n",
         "        print(\"Failed to fetch data from the website\")\n",
+        "        return None\n",
         "\n",
-        "collectLegoSets()\n",
+        "lego_data = collectLegoSets()\n",
+        "if lego_data is not None:\n",
+        "    print(\"CSV file created successfully!\")\n",
+        "else:\n",
+        "    print(\"Failed to create CSV file\")\n",
+        "\n",
         "\n"
       ]
     }
