--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1459,14 +1459,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
-        "outputId": "a1add6c5-84a1-4906-91ac-72d17f9541e3"
+        "outputId": "94a38cac-e988-4c69-9248-ac3c19997428"
       },
       "outputs": [
         {
@@ -1484,6 +1484,8 @@
         "from bs4 import BeautifulSoup\n",
         "import pandas as pd\n",
         "import numpy as np\n",
+        "import time\n",
+        "import random\n",
         "\n",
         "def collectLegoSets():\n",
         "    url = \"https://brickset.com/sets/year-2019\"\n",
@@ -1509,6 +1511,9 @@
         "\n",
         "            data.append({\"Set\": name, \"Price_Euro\": price, \"Pieces\": pieces, \"Minifigs\": minifigs})\n",
         "\n",
+        "            delay = random.uniform(1, 3)  # Random delay between 1 to 3 seconds\n",
+        "            time.sleep(delay)\n",
+        "\n",
         "        lego_df = pd.DataFrame(data)\n",
         "        lego_df.to_csv(\"lego2019.csv\", index=False)\n",
         "\n",
@@ -1518,8 +1523,7 @@
         "if lego_data is not None:\n",
         "    print(\"CSV file created successfully!\")\n",
         "else:\n",
-        "    print(\"Failed to create CSV file\")\n",
-        "\n"
+        "    print(\"Failed to create CSV file\")\n"
       ]
     },
     {
