--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1459,14 +1459,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
-        "outputId": "94a38cac-e988-4c69-9248-ac3c19997428"
+        "outputId": "6bf82b28-5cfd-471f-a19e-07e1c6b13c9c"
       },
       "outputs": [
         {
@@ -1490,6 +1490,14 @@
         "def collectLegoSets():\n",
         "    url = \"https://brickset.com/sets/year-2019\"\n",
         "    response = requests.get(url)\n",
+        "    max_retries = 5\n",
+        "    retries = 0\n",
+        "\n",
+        "    while response.status_code != 200 and retries < max_retries:\n",
+        "        # Retry if request failed\n",
+        "        time.sleep(random.uniform(1, 3))  # Add a delay before retrying\n",
+        "        response = requests.get(url)\n",
+        "        retries += 1\n",
         "\n",
         "    if response.status_code == 200:\n",
         "        soup = BeautifulSoup(response.content, \"html.parser\")\n",
@@ -1511,7 +1519,7 @@
         "\n",
         "            data.append({\"Set\": name, \"Price_Euro\": price, \"Pieces\": pieces, \"Minifigs\": minifigs})\n",
         "\n",
-        "            delay = random.uniform(1, 3)  # Random delay between 1 to 3 seconds\n",
+        "            delay = random.uniform(2, 4)  # Increased delay between 2 to 4 seconds\n",
         "            time.sleep(delay)\n",
         "\n",
         "        lego_df = pd.DataFrame(data)\n",
@@ -1519,11 +1527,16 @@
         "\n",
         "        return lego_df\n",
         "\n",
+        "    else:\n",
+        "        print(\"Failed to fetch data from the website after multiple retries.\")\n",
+        "        return None\n",
+        "\n",
         "lego_data = collectLegoSets()\n",
         "if lego_data is not None:\n",
         "    print(\"CSV file created successfully!\")\n",
         "else:\n",
-        "    print(\"Failed to create CSV file\")\n"
+        "    print(\"Failed to create CSV file\")\n",
+        "\n"
       ]
     },
     {
