--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1459,14 +1459,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
-        "outputId": "6bf82b28-5cfd-471f-a19e-07e1c6b13c9c"
+        "outputId": "04317710-2d48-46d1-98d0-6e4daf04e8c0"
       },
       "outputs": [
         {
@@ -1485,19 +1485,9 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import time\n",
-        "import random\n",
         "\n",
-        "def collectLegoSets():\n",
-        "    url = \"https://brickset.com/sets/year-2019\"\n",
+        "def collectLegoSets(url):\n",
         "    response = requests.get(url)\n",
-        "    max_retries = 5\n",
-        "    retries = 0\n",
-        "\n",
-        "    while response.status_code != 200 and retries < max_retries:\n",
-        "        # Retry if request failed\n",
-        "        time.sleep(random.uniform(1, 3))  # Add a delay before retrying\n",
-        "        response = requests.get(url)\n",
-        "        retries += 1\n",
         "\n",
         "    if response.status_code == 200:\n",
         "        soup = BeautifulSoup(response.content, \"html.parser\")\n",
@@ -1517,22 +1507,29 @@
         "            minifigs_element = meta_div.find(\"dt\", string=\"Minifigs\")\n",
         "            minifigs = minifigs_element.find_next_sibling(\"dd\").get_text().strip() if minifigs_element else np.nan\n",
         "\n",
-        "            data.append({\"Set\": name, \"Price_Euro\": price, \"Pieces\": pieces, \"Minifigs\": minifigs})\n",
+        "            data.append({\"Set\": name, \"PriceEuro\": price, \"Pieces\": pieces, \"Minifigs\": minifigs})\n",
         "\n",
-        "            delay = random.uniform(2, 4)  # Increased delay between 2 to 4 seconds\n",
-        "            time.sleep(delay)\n",
+        "        newData = pd.DataFrame(data, columns=['Set', 'PriceEuro', 'Pieces', 'Minifigs'])\n",
         "\n",
-        "        lego_df = pd.DataFrame(data)\n",
-        "        lego_df.to_csv(\"lego2019.csv\", index=False)\n",
+        "        try:\n",
+        "            nextPage = soup.find('li', class_=\"next\").a['href']\n",
+        "        except:\n",
+        "            nextPage = None\n",
         "\n",
-        "        return lego_df\n",
-        "\n",
+        "        if nextPage:\n",
+        "            time.sleep(6 + np.random.rand() * 10)\n",
+        "            return pd.concat([newData, collectLegoSets(nextPage)], axis=0)\n",
+        "        else:\n",
+        "            return newData\n",
         "    else:\n",
-        "        print(\"Failed to fetch data from the website after multiple retries.\")\n",
+        "        print(f\"Failed to fetch data from {url}. Status code: {response.status_code}\")\n",
         "        return None\n",
         "\n",
-        "lego_data = collectLegoSets()\n",
-        "if lego_data is not None:\n",
+        "url = \"https://brickset.com/sets/year-2019\"\n",
+        "sets1 = collectLegoSets(url)\n",
+        "\n",
+        "if sets1 is not None:\n",
+        "    sets1.to_csv(\"lego2019.csv\", index=False)\n",
         "    print(\"CSV file created successfully!\")\n",
         "else:\n",
         "    print(\"Failed to create CSV file\")\n",
