--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1459,14 +1459,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
-        "outputId": "04317710-2d48-46d1-98d0-6e4daf04e8c0"
+        "outputId": "43a7dbcf-6c46-40be-f782-2794650f73a4"
       },
       "outputs": [
         {
@@ -1494,9 +1494,9 @@
         "        sets = soup.find_all(\"article\", class_=\"set\")\n",
         "\n",
         "        data = []\n",
-        "        for lego_set in sets:\n",
-        "            name = lego_set.find(\"h1\").get_text().strip()\n",
-        "            meta_div = lego_set.find(\"div\", class_=\"meta\")\n",
+        "        for legoset in sets:\n",
+        "            name = legoset.find(\"h1\").get_text().strip()\n",
+        "            meta_div = legoset.find(\"div\", class_=\"meta\")\n",
         "\n",
         "            price_element = meta_div.find(\"dd\", class_=\"list price\")\n",
         "            price = price_element.get_text().strip().replace(\"€\", \"\").replace(\",\", \"\") if price_element else np.nan\n",
@@ -1532,19 +1532,16 @@
         "    sets1.to_csv(\"lego2019.csv\", index=False)\n",
         "    print(\"CSV file created successfully!\")\n",
         "else:\n",
-        "    print(\"Failed to create CSV file\")\n",
-        "\n"
+        "    print(\"Failed to create CSV file\")\n"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "IaqRnNj0pjlq"
+        "id": "XG_BYzMrZVUl"
       },
-      "id": "IaqRnNj0pjlq",
-      "execution_count": null,
-      "outputs": []
+      "id": "XG_BYzMrZVUl"
     }
   ],
   "metadata": {
